system/assets/sample-app/overlays/blue/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fast-api-app
spec:
  template:
    spec:
      containers:
      - name: fastapi
        resources:
          limits:
            cpu: "300m"
            memory: "512Mi"
          requests:
            cpu: "300m"
            memory: "512Mi"
