system/assets/sample-app/overlays/blue/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fast-api-app
  namespace: app
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: "blue"
    external-dns.alpha.kubernetes.io/aws-weight: "50"
